--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <a href="#" class="skillsLink">
                 <img src="images/hiking.png" class="smallImg" alt="">
                 <h4>Hiking</h4>
-                <p class="skillsText">text</p>
+                <p class="skillsText">Text</p>
             </a>
 
         </section>
